# bevy_spine

./: Cargo.toml  readme.md
examples/: 3d.rs  crossfades.rs  custom_material.rs  events.rs  ik.rs  immediate_spawn.rs  simple.rs
examples/spineboy/: main.rs  player.rs
src/: lib.rs  textures.rs
src/debugger/: egui.rs
